--- a/src/MobilitywaysAPI.API/MobilitywaysAPI.API.csproj
+++ b/src/MobilitywaysAPI.API/MobilitywaysAPI.API.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MobilitywayAPI.Shared\MobilitywayAPI.Shared.csproj" />
+    <ProjectReference Include="..\MobilitywaysAPI.Application\MobilitywaysAPI.Application.csproj" />
+    <ProjectReference Include="..\MobilitywaysAPI.Infrastructure\MobilitywaysAPI.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
