--- a/src/MobilitywaysAPI.Application/MobilitywaysAPI.Application.csproj
+++ b/src/MobilitywaysAPI.Application/MobilitywaysAPI.Application.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MobilitywayAPI.Shared\MobilitywayAPI.Shared.csproj" />
+    <ProjectReference Include="..\MobilitywaysAPI.Domain\MobilitywaysAPI.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Users\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
 </Project>
