--- a/test/MobilitywaysAPI.UnitTests/MobilitywaysAPI.UnitTests.csproj
+++ b/test/MobilitywaysAPI.UnitTests/MobilitywaysAPI.UnitTests.csproj
@@ -10,7 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,6 +23,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MobilitywayAPI.Shared\MobilitywayAPI.Shared.csproj" />
+    <ProjectReference Include="..\..\src\MobilitywaysAPI.Application\MobilitywaysAPI.Application.csproj" />
+    <ProjectReference Include="..\..\src\MobilitywaysAPI.Domain\MobilitywaysAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
